Updated wrapper help text and Jovian_portal.

--- a/Notebook_portal.ipynb
+++ b/Notebook_portal.ipynb
@@ -45,7 +45,8 @@
    "metadata": {
     "deletable": false,
     "editable": false,
-    "init_cell": true
+    "init_cell": true,
+    "scrolled": true
    },
    "outputs": [],
    "source": [
@@ -59,20 +60,26 @@
    "source": [
     "___\n",
     "### Dry-run:  \n",
+    "_With a \"dry-run\" we check for errors before starting the actual analysis. If the text ends with the unique identifier then no errors were found._  \n",
+    "\n",
     "**Depending on the size of your dataset, this might take several minutes.**\n",
     "___\n",
     "\n",
-    "Via a \"dry-run\" we check for errors:"
+    "Please [click here for feedback](logs/portal/Jovian_dry-run.log) about the ongoing analysis progress."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [],
    "source": [
     "%%bash\n",
-    "bash jovian -nq -i ./raw_data/"
+    "mkdir -p logs/portal\n",
+    "bash jovian -nq -i ./raw_data/ > logs/portal/Jovian_dry-run.log\n",
+    "cat logs/portal/Jovian_dry-run.log"
    ]
   },
   {
@@ -81,18 +88,29 @@
    "source": [
     "___\n",
     "## Start the analysis\n",
-    "**Depending on the size of your dataset and the amount of computer resources available to you, this can take a longtime.**\n",
+    "**Depending on the size of your dataset and the amount of computer resources available to you, this can take hours.**\n",
     "___"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Please [click here for feedback](logs/portal/Jovian_run.log) about the ongoing analysis progress."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "%%bash\n",
-    "bash jovian -q"
+    "mkdir -p logs/portal\n",
+    "bash jovian -i ./raw_data/ > logs/portal/Jovian_run.log\n",
+    "cat logs/portal/Jovian_run.log"
    ]
   },
   {
@@ -108,7 +126,189 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Please select which viral taxa you want to type, you can choose between \"`NoV`\" (Caliciviridae), \"`EV`\" (Picornaviridae), \"`RVA`\" (Rotavirus A), \"`HAV`\" (Hepatovirus) or \"`HEV`\" (Orthohepevirus)."
+    "Please run the cell below to get an explanation of the different virus typing options."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "%%bash\n",
+    "bash jovian -vt-help"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Caliciviridae typing:  \n",
+    "\n",
+    "Please [click here for feedback](logs/portal/TT-NoV.log) about the ongoing analysis progress."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "%%bash\n",
+    "mkdir -p logs/portal\n",
+    "bash jovian --virus-typing NoV > logs/portal/TT-NoV.log\n",
+    "cat logs/portal/TT-NoV.log"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Picornaviridae typing:  \n",
+    "\n",
+    "Please [click here for feedback](logs/portal/TT-EV.log) about the ongoing analysis progress."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "%%bash\n",
+    "mkdir -p logs/portal\n",
+    "bash jovian --virus-typing EV > logs/portal/TT-EV.log\n",
+    "cat logs/portal/TT-EV.log"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Rotavirus A typing:  \n",
+    "\n",
+    "Please [click here for feedback](logs/portal/TT-RVA.log) about the ongoing analysis progress."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "%%bash\n",
+    "mkdir -p logs/portal\n",
+    "bash jovian --virus-typing RVA > logs/portal/TT-RVA.log\n",
+    "cat logs/portal/TT-RVA.log"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Hepatovirus (Hepatitis A) typing:  \n",
+    "\n",
+    "Please [click here for feedback](logs/portal/TT-HAV.log) about the ongoing analysis progress."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "%%bash\n",
+    "mkdir -p logs/portal\n",
+    "bash jovian --virus-typing HAV > logs/portal/TT-HAV.log\n",
+    "cat logs/portal/TT-HAV.log"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Orthohepevirus (Hepatitis E) typing:  \n",
+    "\n",
+    "Please [click here for feedback](logs/portal/TT-HEV.log) about the ongoing analysis progress."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "%%bash\n",
+    "mkdir -p logs/portal\n",
+    "bash jovian --virus-typing HEV > logs/portal/TT-HEV.log\n",
+    "cat logs/portal/TT-HEV.log"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Papillomavirida (HPV) typing:  \n",
+    "\n",
+    "Please [click here for feedback](logs/portal/TT-PV.log) about the ongoing analysis progress."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "%%bash\n",
+    "mkdir -p logs/portal\n",
+    "bash jovian --virus-typing PV > logs/portal/TT-PV.log\n",
+    "cat logs/portal/TT-PV.log"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Flaviviridae typing:  \n",
+    "\n",
+    "Please [click here for feedback](logs/portal/TT-Flavi.log) about the ongoing analysis progress."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "%%bash\n",
+    "mkdir -p logs/portal\n",
+    "bash jovian --virus-typing Flavi > logs/portal/TT-Flavi.log\n",
+    "cat logs/portal/TT-Flavi.log"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "___\n",
+    "## Jovian report:\n",
+    "___"
    ]
   },
   {
@@ -117,48 +317,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%%bash\n",
-    "bash jovian --virus-typing NoV"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%%bash\n",
-    "bash jovian --virus-typing EV"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%%bash\n",
-    "bash jovian --virus-typing RVA"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%%bash\n",
-    "bash jovian --virus-typing HAV"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%%bash\n",
-    "bash jovian --virus-typing HEV"
+    "%%html\n",
+    "<a href=\"Notebook_report.ipynb\" target=\"_blank\">\n",
+    "    <b>Please click here or the logo below to view the Jovian report.</b>\n",
+    "    <img src=\"https://github.com/DennisSchmitz/Jovian/blob/assets/images/Jovian_logo.png?raw=true\" width=\"200\" height=\"200\" title=\"Jovian report\" alt=\"Please click here to view the Jovian report.\">\n",
+    "</a>"
    ]
   },
   {
@@ -176,7 +339,73 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Placecholder for tree generated html index of log-files"
+    "%%HTML\n",
+    "<script>\n",
+    "function goBack() {\n",
+    "    window.history.back()\n",
+    "}\n",
+    "</script>\n",
+    "\n",
+    "<button onclick=\"goBack()\">Click this button to go back</button>\n",
+    "\n",
+    "<div style=\"text-align: center\">\n",
+    "    <iframe src=\"results/logfiles_index.html\" width=1400 height=980></iframe>\n",
+    "</div>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "___\n",
+    "## Archiving a run or restoring a previous run from archive:\n",
+    "___"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "You can archive a run for long-term storage. The analysis results will be compressed into a single file, that will take up less disk space, that can be restored at a later point in time.  \n",
+    "**N.B.** The compression process can take hours, depending on the size of the analysis and the amount of computer resources available to you. We recommend you to do it overnight.  \n",
+    "\n",
+    "_**Do not cancel this process once started.**_"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%bash\n",
+    "bash jovian --archive"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "You can restore a previous archive by running the cell below. This can take a while to complete."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%bash\n",
+    "bash jovian --rebuild-archive"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "___\n",
+    "Jovian was developed by Schmitz _et al._ 2019 and is available on [Github](https://github.com/DennisSchmitz/Jovian). The virus-typing tools are public services hosted by the [RIVM](https://www.rivm.nl/en) and developed by [Emweb](https://www.emweb.be/) and the [RIVM](https://www.rivm.nl/en).\n",
+    "___"
    ]
   }
  ],
