--- a/Notebook_portal.ipynb
+++ b/Notebook_portal.ipynb
@@ -4,7 +4,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Jovian -  Configure and start an analysis"
+    "___\n",
+    "# Jovian Portal\n",
+    "**Configure and start an analysis**\n",
+    "___"
    ]
   },
   {
@@ -21,7 +24,7 @@
    "metadata": {},
    "source": [
     "___\n",
-    "## Pipeline configuration:\n",
+    "## Pipeline configuration\n",
     "___"
    ]
   },
@@ -36,7 +39,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The list below lists all parameters for an analysis."
+    "Below you will find all Jovian parameters."
    ]
   },
   {
@@ -46,6 +49,9 @@
     "deletable": false,
     "editable": false,
     "init_cell": true,
+    "run_control": {
+     "frozen": true
+    },
     "scrolled": true
    },
    "outputs": [],
@@ -59,7 +65,7 @@
    "metadata": {},
    "source": [
     "___\n",
-    "### Dry-run:  \n",
+    "## Dry-run  \n",
     "_With a \"dry-run\" we check for errors before starting the actual analysis. If the text ends with the unique identifier then no errors were found._  \n",
     "\n",
     "**Depending on the size of your dataset, this might take several minutes.**\n",
@@ -118,7 +124,7 @@
    "metadata": {},
    "source": [
     "___\n",
-    "## Optional - Virus typing\n",
+    "## Virus typing\n",
     "___"
    ]
   },
@@ -133,6 +139,12 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "deletable": false,
+    "editable": false,
+    "init_cell": true,
+    "run_control": {
+     "frozen": true
+    },
     "scrolled": true
    },
    "outputs": [],
@@ -145,7 +157,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Caliciviridae typing:  \n",
+    "### Caliciviridae typing  \n",
     "\n",
     "Please [click here for feedback](logs/portal/TT-NoV.log) about the ongoing analysis progress."
    ]
@@ -154,6 +166,11 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "deletable": false,
+    "editable": false,
+    "run_control": {
+     "frozen": true
+    },
     "scrolled": true
    },
    "outputs": [],
@@ -168,7 +185,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Picornaviridae typing:  \n",
+    "### Picornaviridae typing  \n",
     "\n",
     "Please [click here for feedback](logs/portal/TT-EV.log) about the ongoing analysis progress."
    ]
@@ -177,6 +194,11 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "deletable": false,
+    "editable": false,
+    "run_control": {
+     "frozen": true
+    },
     "scrolled": true
    },
    "outputs": [],
@@ -191,7 +213,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Rotavirus A typing:  \n",
+    "### Rotavirus A typing  \n",
     "\n",
     "Please [click here for feedback](logs/portal/TT-RVA.log) about the ongoing analysis progress."
    ]
@@ -200,6 +222,11 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "deletable": false,
+    "editable": false,
+    "run_control": {
+     "frozen": true
+    },
     "scrolled": true
    },
    "outputs": [],
@@ -214,7 +241,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Hepatovirus (Hepatitis A) typing:  \n",
+    "### Hepatovirus (Hepatitis A) typing  \n",
     "\n",
     "Please [click here for feedback](logs/portal/TT-HAV.log) about the ongoing analysis progress."
    ]
@@ -223,6 +250,11 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "deletable": false,
+    "editable": false,
+    "run_control": {
+     "frozen": true
+    },
     "scrolled": true
    },
    "outputs": [],
@@ -237,7 +269,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Orthohepevirus (Hepatitis E) typing:  \n",
+    "### Orthohepevirus (Hepatitis E) typing  \n",
     "\n",
     "Please [click here for feedback](logs/portal/TT-HEV.log) about the ongoing analysis progress."
    ]
@@ -246,6 +278,11 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "deletable": false,
+    "editable": false,
+    "run_control": {
+     "frozen": true
+    },
     "scrolled": true
    },
    "outputs": [],
@@ -260,7 +297,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Papillomavirida (HPV) typing:  \n",
+    "### Papillomavirida (HPV) typing  \n",
     "\n",
     "Please [click here for feedback](logs/portal/TT-PV.log) about the ongoing analysis progress."
    ]
@@ -269,6 +306,11 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "deletable": false,
+    "editable": false,
+    "run_control": {
+     "frozen": true
+    },
     "scrolled": true
    },
    "outputs": [],
@@ -283,7 +325,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Flaviviridae typing:  \n",
+    "### Flaviviridae typing  \n",
     "\n",
     "Please [click here for feedback](logs/portal/TT-Flavi.log) about the ongoing analysis progress."
    ]
@@ -292,6 +334,11 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "deletable": false,
+    "editable": false,
+    "run_control": {
+     "frozen": true
+    },
     "scrolled": true
    },
    "outputs": [],
@@ -307,19 +354,25 @@
    "metadata": {},
    "source": [
     "___\n",
-    "## Jovian report:\n",
+    "## Jovian report\n",
+    "**Please click the logo below to access the Jovian report.**\n",
     "___"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "deletable": false,
+    "editable": false,
+    "run_control": {
+     "frozen": true
+    }
+   },
    "outputs": [],
    "source": [
     "%%html\n",
     "<a href=\"Notebook_report.ipynb\" target=\"_blank\">\n",
-    "    <b>Please click here or the logo below to view the Jovian report.</b>\n",
     "    <img src=\"https://github.com/DennisSchmitz/Jovian/blob/assets/images/Jovian_logo.png?raw=true\" width=\"200\" height=\"200\" title=\"Jovian report\" alt=\"Please click here to view the Jovian report.\">\n",
     "</a>"
    ]
@@ -329,14 +382,20 @@
    "metadata": {},
    "source": [
     "___\n",
-    "## Log files:\n",
+    "## Log files\n",
     "___"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "deletable": false,
+    "editable": false,
+    "run_control": {
+     "frozen": true
+    }
+   },
    "outputs": [],
    "source": [
     "%%HTML\n",
@@ -358,7 +417,7 @@
    "metadata": {},
    "source": [
     "___\n",
-    "## Archiving a run or restoring a previous run from archive:\n",
+    "## Archiving an analysis\n",
     "___"
    ]
   },
@@ -375,7 +434,13 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "deletable": false,
+    "editable": false,
+    "run_control": {
+     "frozen": true
+    }
+   },
    "outputs": [],
    "source": [
     "%%bash\n",
@@ -386,13 +451,28 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "You can restore a previous archive by running the cell below. This can take a while to complete."
+    "___\n",
+    "## Restore a prior analysis from archive\n",
+    "___"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "You can restore a previous archive by running the cell below. N.B. this can take a while to complete."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "deletable": false,
+    "editable": false,
+    "run_control": {
+     "frozen": true
+    }
+   },
    "outputs": [],
    "source": [
     "%%bash\n",
@@ -437,9 +517,14 @@
    "title_cell": "Table of Contents",
    "title_sidebar": "Contents",
    "toc_cell": false,
-   "toc_position": {},
+   "toc_position": {
+    "height": "calc(100% - 180px)",
+    "left": "10px",
+    "top": "150px",
+    "width": "268px"
+   },
    "toc_section_display": true,
-   "toc_window_display": false
+   "toc_window_display": true
   },
   "varInspector": {
    "cols": {
