Updated notebooks and README

--- a/Notebook_portal.ipynb
+++ b/Notebook_portal.ipynb
@@ -428,7 +428,9 @@
     "You can archive a run for long-term storage. The analysis results will be compressed into a single file, that will take up less disk space, that can be restored at a later point in time.  \n",
     "**N.B.** The compression process can take hours, depending on the size of the analysis and the amount of computer resources available to you. We recommend you to do it overnight.  \n",
     "\n",
-    "_**Do not cancel this process once started.**_"
+    "_**Do not cancel this process once started.**_\n",
+    "\n",
+    "Please [click here for feedback](logs/portal/archive.log) about the ongoing analysis progress."
    ]
   },
   {
@@ -444,7 +446,9 @@
    "outputs": [],
    "source": [
     "%%bash\n",
-    "bash jovian --archive"
+    "mkdir -p logs/portal\n",
+    "bash jovian --archive -y > logs/portal/archive.log\n",
+    "cat logs/portal/archive.log"
    ]
   },
   {
@@ -460,7 +464,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "You can restore a previous archive by running the cell below. N.B. this can take a while to complete."
+    "You can restore a previous archive by running the cell below. N.B. this can take a while to complete.  \n",
+    "\n",
+    "Please [click here for feedback](logs/portal/archive-rebuild.log) about the ongoing archiving progress."
    ]
   },
   {
@@ -476,7 +482,9 @@
    "outputs": [],
    "source": [
     "%%bash\n",
-    "bash jovian --rebuild-archive"
+    "mkdir -p logs/portal\n",
+    "bash jovian --rebuild-archive -y > logs/portal/archive-rebuild.log\n",
+    "cat logs/portal/archive-rebuild.log"
    ]
   },
   {
@@ -484,7 +492,7 @@
    "metadata": {},
    "source": [
     "___\n",
-    "Jovian was developed by Schmitz _et al._ 2019 and is available on [Github](https://github.com/DennisSchmitz/Jovian). The virus-typing tools are public services hosted by the [RIVM](https://www.rivm.nl/en) and developed by [Emweb](https://www.emweb.be/) and the [RIVM](https://www.rivm.nl/en).\n",
+    "Jovian was developed by Schmitz _et al._ 2019 and is available on [Github](https://github.com/DennisSchmitz/Jovian) under a [GPL v3 license](https://www.gnu.org/licenses/gpl-3.0). The virus-typing tools are public services hosted by the [RIVM](https://www.rivm.nl/en) and developed by [Emweb](https://www.emweb.be/) and the [RIVM](https://www.rivm.nl/en).\n",
     "___"
    ]
   }
