--- a/Notebook_report.ipynb
+++ b/Notebook_report.ipynb
@@ -166,7 +166,87 @@
    "metadata": {},
    "source": [
     "### Summary heatmaps:\n",
-    "[Open heatmaps in separate tab by clicking here](results/Heatmap_index.html)"
+    "Open heatmaps in separate tab by clicking these links:  \n",
+    " - [Superkingdoms heatmap](results/heatmaps/Superkingdoms_heatmap.html)  \n",
+    " - [Virus heatmap](results/heatmaps/Virus_heatmap.html)  \n",
+    " - [Phage heatmap](results/heatmaps/Phage_heatmap.html)  \n",
+    " - [Bacteria heatmap](results/heatmaps/Bacteria_heatmap.html)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Superkingdom heatmap"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%HTML\n",
+    "<div style=\"text-align: center\">\n",
+    "    <iframe src=\"results/heatmaps/Superkingdoms_heatmap.html\" width=1400 height=800></iframe>\n",
+    "</div>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Virus heatmaps"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%HTML\n",
+    "<div style=\"text-align: center\">\n",
+    "    <iframe src=\"results/heatmaps/Virus_heatmap.html\" width=1400 height=980></iframe>\n",
+    "</div>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Phage heatmaps"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%HTML\n",
+    "<div style=\"text-align: center\">\n",
+    "    <iframe src=\"results/heatmaps/Phage_heatmap.html\" width=1400 height=980></iframe>\n",
+    "</div>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Bacteria heatmaps"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%HTML\n",
+    "<div style=\"text-align: center\">\n",
+    "    <iframe src=\"results/heatmaps/Bacteria_heatmap.html\" width=1400 height=980></iframe>\n",
+    "</div>"
    ]
   },
   {
