Unfroze portal cells

--- a/Notebook_portal.ipynb
+++ b/Notebook_portal.ipynb
@@ -49,9 +49,6 @@
     "deletable": false,
     "editable": false,
     "init_cell": true,
-    "run_control": {
-     "frozen": true
-    },
     "scrolled": true
    },
    "outputs": [],
@@ -142,9 +139,6 @@
     "deletable": false,
     "editable": false,
     "init_cell": true,
-    "run_control": {
-     "frozen": true
-    },
     "scrolled": true
    },
    "outputs": [],
@@ -168,9 +162,6 @@
    "metadata": {
     "deletable": false,
     "editable": false,
-    "run_control": {
-     "frozen": true
-    },
     "scrolled": true
    },
    "outputs": [],
@@ -196,9 +187,6 @@
    "metadata": {
     "deletable": false,
     "editable": false,
-    "run_control": {
-     "frozen": true
-    },
     "scrolled": true
    },
    "outputs": [],
@@ -224,9 +212,6 @@
    "metadata": {
     "deletable": false,
     "editable": false,
-    "run_control": {
-     "frozen": true
-    },
     "scrolled": true
    },
    "outputs": [],
@@ -252,9 +237,6 @@
    "metadata": {
     "deletable": false,
     "editable": false,
-    "run_control": {
-     "frozen": true
-    },
     "scrolled": true
    },
    "outputs": [],
@@ -280,9 +262,6 @@
    "metadata": {
     "deletable": false,
     "editable": false,
-    "run_control": {
-     "frozen": true
-    },
     "scrolled": true
    },
    "outputs": [],
@@ -308,9 +287,6 @@
    "metadata": {
     "deletable": false,
     "editable": false,
-    "run_control": {
-     "frozen": true
-    },
     "scrolled": true
    },
    "outputs": [],
@@ -336,9 +312,6 @@
    "metadata": {
     "deletable": false,
     "editable": false,
-    "run_control": {
-     "frozen": true
-    },
     "scrolled": true
    },
    "outputs": [],
@@ -364,10 +337,7 @@
    "execution_count": null,
    "metadata": {
     "deletable": false,
-    "editable": false,
-    "run_control": {
-     "frozen": true
-    }
+    "editable": false
    },
    "outputs": [],
    "source": [
@@ -391,10 +361,7 @@
    "execution_count": null,
    "metadata": {
     "deletable": false,
-    "editable": false,
-    "run_control": {
-     "frozen": true
-    }
+    "editable": false
    },
    "outputs": [],
    "source": [
