Heatmaps cells uneditable, removed redundant cell

--- a/Notebook_report.ipynb
+++ b/Notebook_report.ipynb
@@ -165,7 +165,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Summary heatmaps:\n",
+    "### Heatmaps:\n",
     "Open heatmaps in separate tab by clicking these links:  \n",
     " - [Superkingdoms heatmap](results/heatmaps/Superkingdoms_heatmap.html)  \n",
     " - [Virus heatmap](results/heatmaps/Virus_heatmap.html)  \n",
@@ -177,76 +177,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Superkingdom heatmap"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%%HTML\n",
-    "<div style=\"text-align: center\">\n",
-    "    <iframe src=\"results/heatmaps/Superkingdoms_heatmap.html\" width=1400 height=800></iframe>\n",
-    "</div>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Virus heatmaps"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%%HTML\n",
-    "<div style=\"text-align: center\">\n",
-    "    <iframe src=\"results/heatmaps/Virus_heatmap.html\" width=1400 height=980></iframe>\n",
-    "</div>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Phage heatmaps"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%%HTML\n",
-    "<div style=\"text-align: center\">\n",
-    "    <iframe src=\"results/heatmaps/Phage_heatmap.html\" width=1400 height=980></iframe>\n",
-    "</div>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Bacteria heatmaps"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%%HTML\n",
-    "<div style=\"text-align: center\">\n",
-    "    <iframe src=\"results/heatmaps/Bacteria_heatmap.html\" width=1400 height=980></iframe>\n",
-    "</div>"
+    "#### Superkingdom heatmap"
    ]
   },
   {
@@ -259,17 +190,74 @@
    "outputs": [],
    "source": [
     "%%HTML\n",
-    "<script>\n",
-    "function goBack() {\n",
-    "    window.history.back()\n",
-    "}\n",
-    "</script>\n",
-    "\n",
-    "<button onclick=\"goBack()\">Click this button to go back</button>\n",
-    "\n",
-    "\n",
     "<div style=\"text-align: center\">\n",
-    "    <iframe src=\"results/Heatmap_index.html\" width=1400 height=980></iframe>\n",
+    "    <iframe src=\"results/heatmaps/Superkingdoms_heatmap.html\" width=1400 height=800></iframe>\n",
+    "</div>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Virus heatmaps"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "deletable": false,
+    "editable": false
+   },
+   "outputs": [],
+   "source": [
+    "%%HTML\n",
+    "<div style=\"text-align: center\">\n",
+    "    <iframe src=\"results/heatmaps/Virus_heatmap.html\" width=1400 height=980></iframe>\n",
+    "</div>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Phage heatmaps"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "deletable": false,
+    "editable": false
+   },
+   "outputs": [],
+   "source": [
+    "%%HTML\n",
+    "<div style=\"text-align: center\">\n",
+    "    <iframe src=\"results/heatmaps/Phage_heatmap.html\" width=1400 height=980></iframe>\n",
+    "</div>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Bacteria heatmaps"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "deletable": false,
+    "editable": false
+   },
+   "outputs": [],
+   "source": [
+    "%%HTML\n",
+    "<div style=\"text-align: center\">\n",
+    "    <iframe src=\"results/heatmaps/Bacteria_heatmap.html\" width=1400 height=980></iframe>\n",
     "</div>"
    ]
   },
