Updated the notebook footer with correct license.

--- a/Notebook_report.ipynb
+++ b/Notebook_report.ipynb
@@ -203,6 +203,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Please note, many viruses have no \"`order`\" taxonomic rank so always check the \"`family`\" taxonomic rank.**"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
@@ -897,7 +904,7 @@
    "metadata": {},
    "source": [
     "___\n",
-    "Jovian is available on [Github](https://github.com/DennisSchmitz/Jovian) under a [GPL v3 license](https://www.gnu.org/licenses/gpl-3.0). The virus-typing tools are public services hosted by the [RIVM](https://www.rivm.nl/en) and developed by [Emweb](https://www.emweb.be/) and the [RIVM](https://www.rivm.nl/en).\n",
+    "Jovian is available on [GitHub](https://github.com/DennisSchmitz/Jovian) under a [AGPL license](https://www.gnu.org/licenses/agpl-3.0). The virus-typing tools are public services hosted by the [RIVM](https://www.rivm.nl/en) and developed independently of Jovian.\n",
     "___"
    ]
   }
