--- a/Notebook_portal.ipynb
+++ b/Notebook_portal.ipynb
@@ -459,7 +459,7 @@
    "metadata": {},
    "source": [
     "___\n",
-    "Jovian was developed by Schmitz _et al._ 2019 and is available on [Github](https://github.com/DennisSchmitz/Jovian) under a [GPL v3 license](https://www.gnu.org/licenses/gpl-3.0). The virus-typing tools are public services hosted by the [RIVM](https://www.rivm.nl/en) and developed by [Emweb](https://www.emweb.be/) and the [RIVM](https://www.rivm.nl/en).\n",
+    "Jovian is available on [GitHub](https://github.com/DennisSchmitz/Jovian) under a [AGPL license](https://www.gnu.org/licenses/agpl-3.0). The virus-typing tools are public services hosted by the [RIVM](https://www.rivm.nl/en) and developed independently of Jovian.\n",
     "___"
    ]
   }
