Fixed display of embedded HTMLs in report

--- a/Notebook_report.ipynb
+++ b/Notebook_report.ipynb
@@ -95,7 +95,7 @@
    "source": [
     "%%HTML\n",
     "<div style=\"text-align: center\">\n",
-    "    <iframe src=\"results/multiqc.html\" width=1400 height=980></iframe>\n",
+    "    <iframe src=\"results/multiqc.html\" width=100% height=980></iframe>\n",
     "</div>"
    ]
   },
@@ -122,7 +122,7 @@
    "source": [
     "%%HTML\n",
     "<div style=\"text-align: center\">\n",
-    "    <iframe src=\"results/Sample_composition_graph.html\" width=1400 height=980></iframe>\n",
+    "    <iframe src=\"results/Sample_composition_graph.html\" width=100% height=980></iframe>\n",
     "</div>"
    ]
   },
@@ -157,7 +157,7 @@
    "source": [
     "%%HTML\n",
     "<div style=\"text-align: center\">\n",
-    "    <iframe src=\"results/krona.html\" width=1400 height=980></iframe>\n",
+    "    <iframe src=\"results/krona.html\" width=100% height=980></iframe>\n",
     "</div>"
    ]
   },
@@ -187,7 +187,7 @@
    "source": [
     "%%HTML\n",
     "<div style=\"text-align: center\">\n",
-    "    <iframe src=\"results/heatmaps/Superkingdoms_heatmap.html\" width=1400 height=700></iframe>\n",
+    "    <iframe src=\"results/heatmaps/Superkingdoms_heatmap.html\" width=100% height=700></iframe>\n",
     "</div>"
    ]
   },
@@ -217,7 +217,7 @@
    "source": [
     "%%HTML\n",
     "<div style=\"text-align: center\">\n",
-    "    <iframe src=\"results/heatmaps/Virus_heatmap.html\" width=1400 height=700></iframe>\n",
+    "    <iframe src=\"results/heatmaps/Virus_heatmap.html\" width=100% height=700></iframe>\n",
     "</div>"
    ]
   },
@@ -227,6 +227,13 @@
    "source": [
     "#### Phage heatmaps\n",
     "Open phage heatmap in a separate tab by clicking [here](results/heatmaps/Phage_heatmap.html).  "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Please note, many viruses have no \"`order`\" taxonomic rank so always check the \"`family`\" taxonomic rank.**"
    ]
   },
   {
@@ -240,7 +247,7 @@
    "source": [
     "%%HTML\n",
     "<div style=\"text-align: center\">\n",
-    "    <iframe src=\"results/heatmaps/Phage_heatmap.html\" width=1400 height=700></iframe>\n",
+    "    <iframe src=\"results/heatmaps/Phage_heatmap.html\" width=100% height=700></iframe>\n",
     "</div>"
    ]
   },
@@ -263,7 +270,7 @@
    "source": [
     "%%HTML\n",
     "<div style=\"text-align: center\">\n",
-    "    <iframe src=\"results/heatmaps/Bacteria_heatmap.html\" width=1400 height=700></iframe>\n",
+    "    <iframe src=\"results/heatmaps/Bacteria_heatmap.html\" width=100% height=700></iframe>\n",
     "</div>"
    ]
   },
@@ -620,7 +627,7 @@
     "<button onclick=\"goBack()\">Click this button to go back</button>\n",
     "\n",
     "<div style=\"text-align: center\">\n",
-    "    <iframe src=\"results/IGVjs_index.html\" width=1400 height=980></iframe>\n",
+    "    <iframe src=\"results/IGVjs_index.html\" width=100% height=980></iframe>\n",
     "</div>"
    ]
   },
@@ -702,7 +709,7 @@
    "source": [
     "%%HTML\n",
     "<div style=\"text-align: center\">\n",
-    "    <iframe src=\"results/snakemake_report.html\" width=1400 height=980></iframe>\n",
+    "    <iframe src=\"results/snakemake_report.html\" width=100% height=980></iframe>\n",
     "</div>"
    ]
   },
@@ -732,7 +739,7 @@
     "<button onclick=\"goBack()\">Click this button to go back</button>\n",
     "\n",
     "<div style=\"text-align: center\">\n",
-    "    <iframe src=\"results/logfiles_index.html\" width=1400 height=980></iframe>\n",
+    "    <iframe src=\"results/logfiles_index.html\" width=100% height=980></iframe>\n",
     "</div>"
    ]
   },
