--- a/Notebook_report.ipynb
+++ b/Notebook_report.ipynb
@@ -605,22 +605,13 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "deletable": false,
-    "editable": false
+    "scrolled": false
    },
    "outputs": [],
    "source": [
     "%%HTML\n",
-    "<script>\n",
-    "function goBack() {\n",
-    "    window.history.back()\n",
-    "}\n",
-    "</script>\n",
-    "\n",
-    "<button onclick=\"goBack()\">Click this button to go back</button>\n",
-    "\n",
     "<div style=\"text-align: center\">\n",
-    "    <iframe src=\"results/IGVjs_index.html\" width=1400 height=980></iframe>\n",
+    "    <iframe src=\"results/igv.html\" width=100% height=980></iframe>\n",
     "</div>"
    ]
   },
