reset notebook report

--- a/Notebook_report.ipynb
+++ b/Notebook_report.ipynb
@@ -605,6 +605,8 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "deletable": false,
+    "editable": false,
     "scrolled": false
    },
    "outputs": [],
@@ -901,7 +903,7 @@
   }
  ],
  "metadata": {
-  "hide_input": true,
+  "hide_input": false,
   "kernelspec": {
    "display_name": "Python [conda env:Jovian_master] *",
    "language": "python",
