wrapper re-order part 2

--- a/Notebook_report.ipynb
+++ b/Notebook_report.ipynb
@@ -30,7 +30,7 @@
    "outputs": [],
    "source": [
     "%%bash\n",
-    "bin/set_symlink.sh"
+    "bin/scripts/set_symlink.sh"
    ]
   },
   {
@@ -599,13 +599,10 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "deletable": false,
-    "editable": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "!bash bin/start_nginx.sh start"
+    "!bash bin/includes/Start_nginx start"
    ]
   },
   {
