Added an explanation to the Notebook report.
Updated Notebook report to the new Kernel name.

--- a/Notebook_report.ipynb
+++ b/Notebook_report.ipynb
@@ -18,6 +18,8 @@
     "<br>\n",
     "**- If you want to show or hide the programming code, press the button with the eye in it on the toolbar above.**  \n",
     "<br>\n",
+    "**- N.B. The sum total of reads in this report will not add up to the sum total number of reads that were supplied as input. This is because, 1) human reads are removed, 2) PCR-duplicate reads are removed.**  \n",
+    "<br>\n",
     "You can view the graph displaying all Jovian's disparate processes by clicking [here](https://github.com/DennisSchmitz/Jovian/blob/assets/images/rulegraph_Jovian.png?raw=true)."
    ]
   },
@@ -909,9 +911,9 @@
  "metadata": {
   "hide_input": true,
   "kernelspec": {
-   "display_name": "Python [conda env:Jovian_master] *",
+   "display_name": "Jovian",
    "language": "python",
-   "name": "conda-env-Jovian_master-py"
+   "name": "jovian_master"
   },
   "language_info": {
    "codemirror_mode": {
@@ -923,7 +925,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.7"
+   "version": "3.7.7"
   },
   "toc": {
    "base_numbering": 1,
